# inspectre

./: Cargo.toml  LICENSE-APACHE  Makefile  README.md  debug_bp.py  pyproject.toml
.cargo/: config.toml
.github/workflows/: release.yml
crates/bindings/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/hardware/: Cargo.toml
docs/: CONTRIBUTING.md  PRE_PUBLISH_CHECKLIST.md  README.md
docs/architecture/: README.md  branch_prediction.md  isa_support.md  memory_hierarchy.md  pipeline.md
docs/getting_started/: README.md  installation.md  quickstart.md
examples/programs/: mandelbrot.c  merge_sort.c  qsort.c
hardware/: Cargo.toml  Makefile
hardware/configs/: baseline.toml  best_evolved.toml  default.toml  high_perf.toml  linux.toml  tournament.toml
hardware/src/: config.rs  main.rs  stats.rs
inspectre/: __init__.py  __main__.py  config.py  experiment.py  inspectre.pyi  isa.py  objects.py  stats.py
riscv_sim/: __init__.py  config.py  experiment.py  objects.py  riscv_sim.pyi
rvsim/: __init__.py  __main__.py  _cli.py  config.py  experiment.py  isa.py  objects.py  rvsim.pyi  stats.py  types.py
scripts/: README.md  benchmark.py  compare.py  explore.py  sim  sweep.py
scripts/analysis/: branch_predict.py  cache_sweep.py  inst_mix.py  stall_breakdown.py  width_scaling.py
scripts/setup/: boot_linux.py  debug_linux_boot.py  diagnose_init_crash.py
software/: Makefile
software/kernel/: main.c
software/libc/: bench.h  crt0.s  stdio.c  stdio.h  stdlib.c  user.ld
software/linux/: system.dts
tools/: prerelease
(+217 files in other folders)
