[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "riscv_emulator"
version = "0.1.0"
description = "High-performance RISC-V System Emulator"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
manifest-path = "bindings/Cargo.toml"
features = ["extension"]
module-name = "riscv_emulator"
