[package]
name = "inspectre-cli"
description = "RISC-V cycle-accurate simulator CLI"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "inspectre"
path = "src/main.rs"

[dependencies]
inspectre          = { path = "../hardware", version = "0.9.6" }
inspectre-bindings = { path = "../bindings", default-features = false }

clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
pyo3       = { workspace = true, features = ["auto-initialize"] }
